# TCN_deployment

./: .gitignore  .python-version  README.md  common.py  pyproject.toml  requirements.txt  runtime.txt  streaming_gemini_demo.py  streamlit_app.py  streamlit_gemini_demo.py  verify_setup.py
.streamlit/: config.toml
