[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isl-streamlit-app"
version = "1.0.0"
description = "Indian Sign Language Translation with Streamlit and Gemini AI"
requires-python = ">=3.10,<3.11"
dependencies = [
    "streamlit>=1.28.0",
    "torch>=2.0.0,<2.1.0",
    "torchvision>=0.15.0,<0.16.0",
    "opencv-python-headless>=4.8.0,<4.9.0",
    "mediapipe>=0.10.7,<0.11.0",
    "google-generativeai>=0.3.0,<0.4.0",
    "numpy>=1.24.0,<1.27.0",
    "protobuf>=3.20.0,<4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]